<resources>

    <string name="app_name">Clock Tower</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="alarm_description">Alarm Description</string>

    <string name="set_target_time">Target Time</string>
    <string name="set_target_date">Target Date</string>
    <string name="default_song">Default Song</string>

    <string name="alarm">Alarm</string>
    <string name="chronometer">Chronometer</string>
    <string name="timer">Timer</string>

    <style name="format_for_date">MM/dd/yyyy</style>
    <style name="format_for_time">hh:mm a</style>

    <string name="reset">Reset</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="all_alarms">All Alarms</string>
    <string name="exact_alarms">Exact Alarms</string>
    <string name="repeat_alarms">Repeat Alarms</string>
    <string name="notify_30min_before">Notify 30min before</string>
    <string name="_00_00_a">00:00 a</string>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="it_ll_be_exact_alarm">It\'ll Be Exact Alarm</string>
    <string name="it_ll_be_repeat_alarm">It\'ll be repeat alarm</string>
    <string name="at">At</string>

</resources>