<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_all_alarms"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/all_alarms" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_exact_alarms"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/exact_alarms" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_repeat_alarms"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/repeat_alarms" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.appcompat.widget.LinearLayoutCompat>