<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="isRepeat"
            type="boolean" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:liftOnScroll="false">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextColor="?attr/colorOnPrimary" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/field_alarm_name"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/alarm_name"
                    android:textColorHint="#546E7A">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FEF7FF"
                        android:importantForAccessibility="no"
                        android:textColorHint="#546E7A" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/field_alarm_description"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/alarm_description"
                    android:textColorHint="#546E7A"
                    app:counterEnabled="true"
                    app:counterMaxLength="140">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="128dp"
                        android:background="#FEF7FF"
                        android:gravity="start"
                        android:importantForAccessibility="no"
                        android:maxLength="140"
                        android:textColorHint="#546E7A" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_day_of_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingHorizontal="16dp"
                    android:scrollbars="horizontal"
                    android:visibility="@{ !isRepeat ? View.GONE: View.VISIBLE }" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="12dp">

                    <TextView
                        android:id="@+id/placeholder_date"
                        style="@style/TextAppearance.Material3.DisplaySmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_00_00_0000"
                        android:textStyle="bold"
                        android:visibility="@{ isRepeat ? View.GONE: View.VISIBLE }"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/at" />

                    <TextView
                        android:id="@+id/at"
                        style="@style/TextAppearance.Material3.DisplaySmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/at"
                        android:textStyle="bold"
                        android:layout_marginHorizontal="8dp"
                        android:visibility="@{ isRepeat ? View.GONE: View.VISIBLE }"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/placeholder_time"
                        app:layout_constraintStart_toEndOf="@+id/placeholder_date"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/placeholder_time"
                        style="@style/TextAppearance.Material3.DisplaySmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_00_00_a"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/at" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/button_change_song"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/default_song" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/label_for_switch_notify_before"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notify_30min_before"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/switch_notify_before"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/switch_notify_before" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/switch_notify_before"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:importantForAccessibility="no"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/view_alarm_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end|right"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_save" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
